without shared data in tests